# web_server

./: 403.html  404.html  Cargo.toml  README.md  calculator.html  index.html  log4rs.yaml  query.html
cgi-bin/: calculator.py  hello.py  query.py  upload.py
css/: index.css
data/: database.db
src/: handler.rs  log.rs  logging.rs  main.rs  pool.rs  record.rs  request.rs  response.rs  router.rs  server.rs
