[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
#simplelog = "0.11.2"
subprocess = "0.2.8"
chrono = "0.4.19"
clap = {version = "3.0.14",features = ["derive"]}
once_cell = "1.9.0"

[profile.dev]
opt-level = 3
overflow-checks = false
incremental = true